--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.14.0",
     "fs": "^0.0.1-security",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
